monitoring/uptime/kuma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: ghcr.io/louislam/uptime-kuma:2.0.0-beta.1
          volumeMounts:
            - name: config
              mountPath: /app/data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: uptime-kuma-config-pvc
