monitoring/uptime/kuma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuma-ui
  namespace: notifications
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
