monitoring/uptime/kuma-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma-route
  namespace: notifications
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "status.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        # Use backendRefs for Gateway API v1beta1
        - name: kuma-ui
          port: 3001
